# ez_analog_processor

./: .gitignore  .pre-commit-config.yaml  AGENT.md  LICENSE  README.md  analog_mean_processor.py  package.xml  pyproject.toml  requirements.txt  setup.cfg  setup.py
aws_publisher/: .env  .env.example  bashrc_exports.example  publish_analog_pin_data_to_AWS.py
config/: aws_iot.example.yaml  sensors.example.yaml  sensors.yaml
ez_analog_processor/: analog_processor.py  publish_analog_pin_data_to_AWS.py
ez_tb3_streamer/: __init__.py  analog_mean_processor.py  analog_processor.py  publish_analog_pin_data_to_AWS.py  stream_processed_analog.py  stream_ros2_topic_to_LAN.py
launch/: analog_processor.launch.py  aws_publisher.launch.py  combined_tb3_launch.py
msg/: AnalogSensor.msg  ChemSensor.msg  HumiditySensor.msg  TemperatureSensor.msg
